<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_bg"
    android:padding="30dp"
    tools:context=".fragment.signUp.SignUpFragment">

    <ImageView
        android:id="@+id/ivBackFromSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        />

    <ImageView
        android:id="@+id/ivImageSignUp"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/ic_image_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackFromSignUp"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textSize="26sp"
        android:textColor="@color/black_500"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageSignUp" />

    <LinearLayout
        android:id="@+id/llEmailInputSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_alternate_email_24"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            />
        <EditText
            android:id="@+id/etInputEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_200"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/xxxx_gmail_com"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_500"
            android:textColorHint="@color/black_200"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llPasswordInputSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEmailInputSignUp"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_vpn_key_24"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/etInputPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_200"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/hint_password"
            android:textColor="@color/black_500"
            android:inputType="textPassword"
            android:textColorHint="@color/black_200"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llPhoneInputSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llPasswordInputSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_phone_24"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/etPhoneInputSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/black_500"
            android:textColorHint="@color/black_200"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp"
            android:backgroundTint="@color/black_200"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTermAndConditions"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPhoneInputSignUp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_re_agree_to_our"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center"
            android:textColor="@color/black_200"
            android:layout_marginEnd="6dp"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/tvGotoTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:textColor="@color/pink_primary"
            android:fontFamily="@font/poppins_semibold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llPrivacyPolicy"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/llTermAndConditions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and2"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="12sp"
            android:textColor="@color/black_200"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            />

        <TextView
            android:id="@+id/tvGotoPrivacypolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/pink_primary"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="13sp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnContinueSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/btn_bg"
        android:text="@string/continuee"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/llGotoLogin"
        app:layout_constraintTop_toBottomOf="@+id/llPrivacyPolicy"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/llGotoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joined_us_before"
            android:textColor="@color/black_200"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            />
        <TextView
            android:id="@+id/tvGotoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/pink_primary"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>