<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".fragment.login.LoginFragment">

    <ImageView
        android:id="@+id/ivBackFromLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        />

    <ImageView
        android:id="@+id/ivImageLogin"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/ic_image_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackFromLogin"
        />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageLogin"
        android:text="@string/login"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/poppins_bold"
        android:textSize="26sp"
        android:textColor="@color/black_500"
        />

    <LinearLayout
        android:id="@+id/llEmailInputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_alternate_email_24"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            />
        <EditText
            android:id="@+id/etInputEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_200"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/xxxx_gmail_com"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_500"
            android:textColorHint="@color/black_200"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llPasswordInputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEmailInputLogin"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_vpn_key_24"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            />
        <EditText
            android:id="@+id/etInputPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_200"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/black_500"
            android:textColorHint="@color/black_200"
            android:textSize="15sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tvForgotPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/pink_primary"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPasswordInputLogin"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLogin"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        />
    <LinearLayout
        android:id="@+id/llOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginLogin"
        android:layout_marginTop="20dp"
        >
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black_100"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black_200"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black_100"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>